<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Space_quiz"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/headingText"
            android:layout_marginTop="@dimen/thirty"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            android:textColor="#FFFFFF"
            android:paddingTop="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quoteBy"
            android:textColor="#FFFFFF"
            android:paddingStart="@dimen/twoHundred"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textHint"
            android:textColorHint="#B0BEC5"
            android:textColor="#78909C"
            android:inputType="textCapWords"
            android:layout_marginTop="@dimen/oneFiveZero"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/oneFiveZero"/>

    </LinearLayout>

</ScrollView>